2015-06-18 00:06 UTC auto-commit